feat: Nexus Neuro-Twin Full-Stack with MuMax3 Interpolation
- FastAPI + WebSocket backend
- Pre-computed MuMax3 simulation with 5x5 grid interpolation
- React 19 + Three.js frontend
- Firebase Hosting + Cloud Run deployment
- FinOps optimized (/month)

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus | The Future of SaaS</title>
-    <meta name="description" content="Experience the next generation of productivity with Nexus. Beautifully designed, glassmorphic UI for modern teams.">
+    <title>Nexus Entertainment | Future of Virtual Identity</title>
+    <meta name="description" content="Nexus Entertainment - The Future of Digital Human Twins and Virtual Idols. Create your hyper-realistic avatar and ascend to the Metaverse." />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
